syntax = "proto3";
package DouDizhu;

option go_package = "network/protodef";
option csharp_namespace = "Network.Proto";

import "Player.proto";

message PRegisterRequest {
    string account = 1;
    string password = 2;
}



message PLoginRequest {
    string account = 1;
    string password = 2;
}

message PLoginResponse {
    PPlayer info = 1;
}